[chore] : order-service 의존성 수정